# Funciones-Data

./: .flake8  .gitignore  .gitleaks.toml  README.md  etl_utils.py  fun.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ejemplos/: analisis_csv.ipynb  conexion_sql.ipynb  limpieza_datos.ipynb  uso_excel.ipynb
formulas/: __init__.py  csv_utils.py  estadisticas.py  excel_utils.py  file_utils.py  html_utils.py  json_utils.py  model_utils.py  modelos.py  pandas_transform.py  sql_utils.py  visualizaciones.py
tests/: test_csv_utils.py  test_model_utils.py  test_pandas_transform.py
